@@ -12,6 +12,9 @@ import org.springframework.ai.vectorstore.SearchRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
@@ -31,103 +34,129 @@ public class RAGService {
         this.objectMapper = objectMapper;
     }
 
-    private final String PROMPT_INTENT_VALIDATE = """
-            You as a music recommender. you can only recommend music that match the user preference. Is this user question related to music recommending.
-            <user-question>
-            %s
-            <user-question>
-            Strictly answer only 'YES' or 'NO'
-            """;
-    private final String PROMPT_KEYWORD_EXTRACT = """
-            You as a music recommender. What is the keywords about music preference form this user question.
-            <user-question>%s<user-question>.
-            Strictly answer in this json format '{ keywords: string[] }'
-            """;
-
-    private final String PROMPT_CHOOSING_BEST_FIT = """
-            You as a music recommender. Which one of this song it more related to user question: %s.
-            Song A
-                metadata: %s
-                lyrics: %s
-            Song B
-                metadata: %s
-                lyrics: %s
-            Answer only 'A' or 'B'
-            """;
     private final String PROMPT_SUMMARY = """
             Summarize this random word: %s.
-            
             Do not write "Here's a summary", only write the content.
             """;
+    private final String SONG_INFORMATION = """
+                        
+            This is the meta data information from the song '%s': %s
+                        
+            This is the lyrics of song '%s': %s
+                        
+            """;
+    private final String PROMPT_IS_METADATA_FOUND = """
+            This is the user question: %s
+            Can you find the answer of this question form this metadata
+            
+            %s
+            
+            %s
+            
+            Strictly answer 'YES' or 'NO'
+            """;
+    private final String PROMPT_USING_METADATA_TO_ANSWER = """
+            This is the user question: %s
+            Using one of this metadata to answer user question. Do not use other information to answer. If not enough information then answer "You don't know".
+            
+            %s
+            
+            %s
+            
+            """;
     private final String PROMPT_GENERATE_ANSWER_WITH_REFERENCE = """
-            New conversation.
-            You as a music recommender. This is the information form the music database. 
-            This is metadata of the song: %s, 
+            This is the user question: %s
                         
-            This is the summary of the song %s.
+            %s
                         
-            Answer this user question that you recommend this song with information above: %s
+            %s
+                        
+            Answer the user question by selecting either information from '%s' or '%s' that are more closely relate to the user question. Why you select this song?
+            If you think that both song are not related to user question. You must say that there is no song in the database that match the user description.
+            
+            Do not make up information. 
+            Do not mention the another song in the output.
+            Do not use the sentence that means 'Based on the user's question' when answer. 
+            Do not mention the word that means summary.
+            """;
+    private final String PROMPT_GENERATE_ANSWER_WITH_REFERENCE_2 = """
+            This is the user question: %s
+                        
+            %s
+                        
+            %s
+                        
+            Answer the user question by selecting either information from '%s' or '%s' that are more closely relate to the user question and why you choose this answer.
+            If you think that both song are not related to user question. You must say that there is no song in the database that match the user description.
+            
+            Do not make up information. 
+            Do not mention the another song in the output.
+            Do not use the sentence that means 'Based on the user's question' when answer. 
+            Do not mention the word that means summary.
             """;
     private final String PROMPT_GENERATE_ANSWER_NO_REFERENCE = """
             You as a music recommender. Strictly answer to this user question that your don't have any recommend form for this question.
-            
+                        
             <user-question>
             %s
             <user-question>
-            
+                        
             Do not write "Based on context you provided", only write the content.
             """;
 
     @SneakyThrows
     public String generateResponse(String userPrompt) {
-        var validateIntentPrompt = new Prompt(String.format(PROMPT_INTENT_VALIDATE, userPrompt), options);
-        var responseValidateIntent = chatModel.call(validateIntentPrompt);
-        var isRelated = responseValidateIntent.getResult().getOutput().getContent();
-        log.info("[generateResponse][1]\n pre-defined intent isRelated prompt: {}, answer={}", validateIntentPrompt.getContents(), isRelated);
-
-        if ("NO".equals(isRelated))
-            return "I'm music recommender. I can recommending music based on your provided preference.";
-
-        var keywordExtractPrompt = new Prompt(String.format(PROMPT_KEYWORD_EXTRACT, userPrompt), options.copy().withFormat("json"));
-        var responseKeyword = chatModel.call(keywordExtractPrompt);
-        var searchKeyword = responseKeyword.getResult().getOutput().getContent();
-        log.info("[generateResponse][2]\n keyword extracting prompt: {}, answer: {}", keywordExtractPrompt, searchKeyword);
-
         var searchResult = this.vectorStoreRepository.doSimilaritySearch(SearchRequest
                 .query(userPrompt)
-                .withSimilarityThreshold(0.3)
-                .withTopK(3));
-        var searchResultLists = searchResult.stream().map(it -> it.getMetadata().toString()).collect(Collectors.joining(","));
-        log.info("searchResultLists {}", searchResultLists);
+//                .withSimilarityThreshold(0.3)
+                .withTopK(2));
+        var searchResultLists = searchResult.stream().map(it -> it.getMetadata().toString()).collect(Collectors.joining(",\n"));
+        log.info("searchResultLists \n{}", searchResultLists);
 
         if (searchResult.isEmpty()) {
             var templatePrompt = new Prompt(String.format(PROMPT_GENERATE_ANSWER_NO_REFERENCE, userPrompt), options);
             var response = chatModel.call(templatePrompt);
-            log.info("[generateResponse][2.1]\n Not found reference. templatePrompt: {}, answer: {}", templatePrompt.getContents(), response.getResult().getOutput().getContent());
             return response.getResult().getOutput().getContent();
         }
 
-        var bestFitPrompt = new Prompt(String.format(PROMPT_CHOOSING_BEST_FIT, userPrompt,
+
+        List<String> songList = new ArrayList<>();
+        for (var candidate : searchResult) {
+            var summarySongPrompt = new Prompt(String.format(PROMPT_SUMMARY, candidate.getContent()));
+            var responseSummary = chatModel.call(summarySongPrompt).getResult().getOutput().getContent();
+            log.info("[summary] {}, {}", summarySongPrompt, responseSummary);
+            songList.add(String.format(SONG_INFORMATION,
+                            candidate.getMetadata().get("track_name"),
+                            candidate.getContent(),
+                            candidate.getMetadata().get("track_name"),
+                            responseSummary
+                    )
+            );
+        }
+
+        var findMetaDatePrompt = new Prompt(String.format(PROMPT_IS_METADATA_FOUND,
+                userPrompt,
                 searchResult.get(0).getMetadata(),
-                searchResult.get(0).getContent(),
-                searchResult.get(1).getMetadata(),
-                searchResult.get(1).getContent())
-        );
-        var responseBestFit = chatModel.call(bestFitPrompt);
-        log.info("[bestFit] prompt {} ,answer {}", bestFitPrompt, responseBestFit.getResult().getOutput().getContent());
-        Document bestFitResult;
-        if ("A".equals(responseBestFit.getResult().getOutput().getContent())) {
-            bestFitResult = searchResult.getFirst();
-        } else bestFitResult = searchResult.getLast();
+                searchResult.get(1).getMetadata()));
+        var isFound = chatModel.call(findMetaDatePrompt).getResult().getOutput().getContent();
+        log.info("isFound {} {}", findMetaDatePrompt.getContents(), isFound);
+        if("YES".equals(isFound)) {
+            var answerFromMetaData = new Prompt(String.format(PROMPT_USING_METADATA_TO_ANSWER,
+                    userPrompt,
+                    searchResult.get(0).getMetadata(),
+                    searchResult.get(1).getMetadata()));
+            log.info("YES {} {}", findMetaDatePrompt.getContents(), answerFromMetaData);
+            return chatModel.call(answerFromMetaData).getResult().getOutput().getContent();
+        }
 
-
-        var summarySongPrompt = new Prompt(String.format(PROMPT_SUMMARY, bestFitResult.getContent()));
-        var responseSummary = chatModel.call(summarySongPrompt).getResult().getOutput().getContent();
-        log.info("[summary] {}, {}", summarySongPrompt, responseSummary);
-
-
-        log.info("[generateResponse][2.2]\n searchResult: id={}", objectMapper.writeValueAsString(searchResult.stream().map(it -> it.getId())));
-        var templatePrompt = new Prompt(String.format(PROMPT_GENERATE_ANSWER_WITH_REFERENCE, bestFitResult.getMetadata(), responseSummary, userPrompt), options);
+        var templatePrompt = new Prompt(String.format(
+                    PROMPT_GENERATE_ANSWER_WITH_REFERENCE,
+                    userPrompt,
+                    songList.get(0),
+                    songList.get(1),
+                    searchResult.get(0).getMetadata().get("track_name"),
+                    searchResult.get(1).getMetadata().get("track_name")),
+                options);
         var response = chatModel.call(templatePrompt);
         log.info("[generateResponse][3]\n \n\n============ templatePrompt\n {}, \n\n============ answer\n {}", templatePrompt.getContents(), response.getResult().getOutput().getContent());
         return response.getResult().getOutput().getContent();
